--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
     </nav>
     <main>
         <h2>Vacation Contest Sign-Up Form</h2>
-        <form method="GET" action="results.html"> <!-- TODO: Set Action and Method Properties -->
+        <form method="GET" action="results.html">
+             <!-- TODO: Set Action and Method Properties -->
             <div>
+                <span class="required-field">*</span>
                 <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <input type="text" id="firstname" name="firstname" required>
                 <!-- TODO: Create a "lastname" input with type "text" -->
+                <span class="required-field">*</span>
                 <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <input type="text" id="lastname" name="lastname" required>
             </div>
             <div>
             <!-- TODO: Make fieldset and legend -->
             <fieldset>
                 <legend>Your Contact Info</legend>
             <!-- Todo: Email Input -->
+            <span class="required-field">*</span>
             <label for="email">Your Email</label>            
-            <input type="text" id="email" name="email">
+            <input type="text" id="email" name="email" required>
             <!-- Todo: Street Address Input -->
             <!-- Todo: City, State, and Zip Inputs -->
             <label for="address">Your Street Address</label>
