--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
             <div>
                 <span class="required-field">*</span>
                 <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname" required>
+                <input type="text" minlength="2" maxlength="35" id="firstname" name="firstname" required>
                 <!-- TODO: Create a "lastname" input with type "text" -->
                 <span class="required-field">*</span>
                 <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname" required>
+                <input type="text" minlength="2" maxlength="35" id="lastname" name="lastname" required>
+                <span class="required-field">*</span>
+                <label for="age">Your Age</label>
+                <input type="number" min="21" max="120" id="age" name="age" required>
+                <h5>Participants must be 21 years old or older to be eligible to win.</h5>
             </div>
             <div>
             <!-- TODO: Make fieldset and legend -->
@@ -93,7 +97,7 @@
             </datalist>
         
             <label for="zip">Your Zipcode</label>
-            <input type="text" id="zip" name="zip">
+            <input type="number" minlenghth="5" maxlength="5" id="zip" name="zip">
         </div>
             <!-- TODO: Second fieldset -->
             </fieldset>
