--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <!-- Todo: Email Input -->
             <span class="required-field">*</span>
             <label for="email">Your Email</label>            
-            <input type="text" id="email" name="email" required>
+            <input type="email" id="email" name="email" required>
             <!-- Todo: Street Address Input -->
-            <!-- Todo: City, State, and Zip Inputs -->
             <label for="address">Your Street Address</label>
             <input type="text" id="address" name="address">
+            <!-- Todo: City, State, and Zip Inputs -->
             <label for="city">Your City</label>
             <input type="text" id="city" name="city">
             <label for="state">Your State</label>
@@ -97,7 +97,7 @@
             </datalist>
         
             <label for="zip">Your Zipcode</label>
-            <input type="number" minlenghth="5" maxlength="5" id="zip" name="zip">
+            <input type="text" pattern="[0-9]{5}" id="zip" name="zip" title="5-Digit US Zip Code">
         </div>
             <!-- TODO: Second fieldset -->
             </fieldset>
@@ -148,6 +148,12 @@
             </div>
             <!-- TODO: Submit Button -->
             </fieldset>
+            <div>
+                <span class="required-field">*</span>
+                <label for="password">Create a Secret Code</label>
+                <input pattern="[0-9A-Za-z]{6}" type="password" id="password" name="password" value="Password" title="6 Alphanumeric Character Passcode" required>
+            </div>
+            <br>
             <input type="submit" value="Enter the Contest">
         </form>
     </main>
